--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -14,12 +14,14 @@
             <th>Author</th>
             <th>Publication Year</th>
             <th>ISBN</th>
+            <th>Category</th>
         </tr>
         <tr th:each="book : ${books}">
             <td th:text="${book.title}"></td>
             <td th:text="${book.author}"></td>
             <td th:text="${book.publicationYear}"></td>
             <td th:text="${book.isbn}"></td>
+            <td th:text="${book.category != null ? book.category.name : 'Unknown'}"></td>
             <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" >Delete</a></td>
             <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
         </tr>
