--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -13,6 +13,11 @@
         <p>Author: <input type="text" th:field="*{author}"/></p>
         <p>Publication Year: <input type="text" th:field="*{publicationYear}"/></p>
         <p>ISBN: <input type="text" th:field="*{isbn}"/></p>
+        <Label>Category:</Label>
+            <select id="categories" th:field="*{category}">
+                <option value="" th:text="'Select category (optional)'"></option> <!-- Tyhjä valinta -->
+                <option th:each="category: ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+            </select>
         <p><input type="submit" value="Save"/></p>
     </form>
 </body>
