--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookstore book list</title>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}">
-</head>
-<body>
-    <h1>Books</h1>
-    <table class="table table-striped">
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="css/bootstrap.min.css"
+      th:href="@{css/bootstrap.min.css}"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h1 style="text-align: left; float: left">Books</h1>
+        <form style="text-align: right" th:action="@{/logout}" method="POST">
+          <input type="submit" value="Sign out" class="btn btn-sm btn-danger" />
+        </form>
+        <h3 style="text-align: right; float: right">
+          <span sec:authentication="name"></span>
+        </h3>
+      </div>
+      <table class="table table-striped">
         <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Publication Year</th>
-            <th>ISBN</th>
-            <th>Category</th>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Publication Year</th>
+          <th>ISBN</th>
+          <th>Category</th>
         </tr>
         <tr th:each="book : ${books}">
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.author}"></td>
-            <td th:text="${book.publicationYear}"></td>
-            <td th:text="${book.isbn}"></td>
-            <td th:text="${book.category != null ? book.category.name : 'Unknown'}"></td>
-            <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" >Delete</a></td>
-            <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
+          <td th:text="${book.title}"></td>
+          <td th:text="${book.author}"></td>
+          <td th:text="${book.publicationYear}"></td>
+          <td th:text="${book.isbn}"></td>
+          <td
+            th:text="${book.category != null ? book.category.name : 'Unknown'}"
+          ></td>
+          <td>
+            <a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger"
+              >Delete</a
+            >
+          </td>
+          <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
         </tr>
-    </table>
+      </table>
 
-    <p><a href="/addBook" class="btn btn-success" >Add book</a></p>
-    
-</body>
+      <p><a href="/addBook" class="btn btn-success">Add book</a></p>
+    </div>
+  </body>
 </html>
