Add authentication to only permit and show Create, Delete, Update for ADMIN role

--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -42,16 +42,20 @@
           <td
             th:text="${book.category != null ? book.category.name : 'Unknown'}"
           ></td>
-          <td>
+          <td sec:authorize="hasAuthority('ADMIN')">
             <a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger"
               >Delete</a
             >
           </td>
-          <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
+          <td sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a>
+          </td>
         </tr>
       </table>
 
-      <p><a href="/addBook" class="btn btn-success">Add book</a></p>
+      <p sec:authorize="hasAuthority('ADMIN')">
+        <a href="/addBook" class="btn btn-success">Add book</a>
+      </p>
     </div>
   </body>
 </html>
